rollback to 1.39